Time: 2 ms (84.5%), Space: 44.5 MB (92.98%) - LeetHub